5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1764_1577.log
== TEST (2019-05-23 20:30:28) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n-1)
d=zeros(n, dtype=int)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:30:51) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n)
d=zeros(n, dtype=int)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 20:30:58) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n)
d=zeros(n, dtype=int)

p=(a*t**2/2)+v*t

print(p)
-- EXECUTION TIME:
0.476335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1577/main.py", line 2, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: '1.2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:31:08) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n-1)
d=zeros(n-1, dtype=int)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:31:42) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n-1)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:31:53) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 20:31:59) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- EXECUTION TIME:
0.549386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1577/main.py", line 2, in <module>
    a=int(input())
ValueError: invalid literal for int() with base 10: '1.2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:32:29) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(:n-1)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t=arange(:n-1)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:32:38) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(0:n-1)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t=arange(0:n-1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:33:23) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=array(arange(:n-1))
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t=array(arange(:n-1))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:34:01) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=array[arange(:n-1)]
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t=array[arange(:n-1)]
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:35:17) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t= array(arange(:n))
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t= array(arange(:n))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:35:31) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t= array([arange(:n)])
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t= array([arange(:n)])
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:36:00) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t= array(arange[:n])
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:36:52) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t = array([:n])
print(t)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t = array([:n])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:37:44) 
-- CODE:
from numpy import *
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange[:n]
print(t)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:37:59) 
-- CODE:
from numpy import arange
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange[:n]
print(t)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import arange
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:38:21) 
-- CODE:
from numpy import arange
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange([:n])
print(t)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t=arange([:n])
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:38:49) 
-- CODE:
from numpy import arange
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(:n)
print(t)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
File "XXXX", line 6
    t=arange(:n)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:39:51) 
-- CODE:
from numpy import arange
a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(5)
print(t)
d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import arange
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:41:00) 
-- CODE:
from numpy import arange
from numpy import zeros

a=int(input("aceleracao: "))
v=int(input("velocidade inicial: "))
n=int(input('Numero: '))

t=arange(n)
print(t)

d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import arange
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:41:39) 
-- CODE:
from numpy import arange
from numpy import zeros

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)


d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import arange
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:42:05) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)


d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:42:27) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)


d=zeros(n, dtype=int)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:43:00) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)


d=zeros(n, dtype=float)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:44:09) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)


d=zeros(n)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:44:24) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)


d=zeros(n, dtype=int)

p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:44:37) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)


d=zeros(n, dtype=int)

d=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:44:54) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)




p=(a*t**2/2)+v*t

print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 20:45:02) 
-- CODE:
from numpy import *

a=float(input("aceleracao: "))
v=float(input("velocidade inicial: "))
n=float(input('Numero: '))

t=arange(n)




p=(a*t**2/2)+v*t

print(p)
-- EXECUTION TIME:
0.568679
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
